--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="./netflix.js" defer></script>
 </head>
 
@@ -94,21 +95,69 @@
             <div class="faqContainer">
                 <h2 class="h2">Frequently Asked Questions</h2>
                 <div class="questionsContainer">
-                    <div class="question">
-                        <div class="questionHeader" id="questionHeader">
-                            <p>What is Netfix?</p>
-                            <p class="plus" id="plus">+</p>
-                        </div>
-                        <div class="questionAnswer" id="questionAnswer">Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
-
-                            You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</div>
+                    <div class="acordeon">
+                        <p>What is Netflix?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices. <br>
+                            <br> You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>How much does Netflix cost?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from EUR 7.99 to EUR 11.99 a month. No extra costs, no contracts.
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>Where can I watch?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                            <br>
+                            <br>
+                            You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>How do I cancel?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>What can I watch on Netflix?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>Is Netflix good for kids?</p>
+                    </div>
+                    <div class="desc">
+                        <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+                            <br>
+                            <br>
+                            Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.
+                        </p>
+                    </div>
+                    <div class="acordeon">
+                        <p>Why am I seeing this language?</p>
+                    </div>
+                    <div class="desc">
+                        <p>Your browser preferences determine the language shown here.</p>
                     </div>
 
-                    <div class="margin">
+                    <div class="restartContainer">
                         <p>Ready to watch? Enter your email or mobile number to create or restart your membership.</p>
-                        <div class="getStartedContainer margin">
-                            <input type="text" placeholder="Email or mobile number">
-                            <button>Get Started ></button>
+                        <div class="getStartedContainer restartContainer">
+                            <input type="text" placeholder="Email address">
+                            <button>Get Started
+                                <i class="bi bi-caret-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
