--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <p>Ready to watch? Enter your email or mobile number to create or restart your membership.</p>
             <div class="getStartedContainer">
                 <input type="text" placeholder="Email or mobile number">
-                <button>Get Started ></button>
+                <button>Get Started
+                    <i class="bi bi-caret-right"></i>
+                </button>
             </div>
         </div>
     </header>
